Wed Jul 25 14:23:16 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c: Added pthread implementation of
	   gnet_inetaddr_new_async.
	* src/gnet-private.h (_GInetAddrAsyncState ): "
	* configure.in: Check for pthreads

Wed Jun 13 11:29:25 2001  Andrew Lanoix <alanoix@umich.edu>

	* gnet.def: update
	* README.win32: update
	* tests/Makefile.mingw: Build hash.c
	* tests/hash.c: Add a note that extra \r's on win32
	  text files will throw off SHA and MD5 if you don't
	  remove them
  
Sat Jun  9 15:35:19 2001  David Helder  <dhelder@umich.edu>

	* tests/hash.c: Actually removed mmap as advertised.

Fri Jun  8 16:49:16 2001  David Helder  <dhelder@umich.edu>

	* tests/hash.c: Don't use mmap.  Don't make main loop.

Fri Jun  8 15:26:41 2001  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c (async_server_iofunc): Should be
	   accept_nonblcok in async_server_iofunc, not accept.
	
	* BUGS: Typo

Thu May 31 10:46:30 2001  David Helder  <dhelder@umich.edu>

	* Makefile.am (EXTRA_DIST): Add README.win32 GNET.DSP
	     config.h.win32 gnet.def
	* */Makefile.am: Add makefile.mingw
	
	* configure.in: Version is now 1.1.1 [unreleased]
	
	* configure.in: Remove poll check
	* src/udp.c (gnet_udp_socket_has_packet): Use select,
	   not poll.
	* src/gnet-private.h: Remove poll
	* README.macosx: Added
	* Makefile.am: Added README.macosx to 
	   EXTRA_DIST
	* AUTHORS: Added Eric Cronin for above

	* src/sha.c (gnet_sha_clone): Added.
	* src/md5.c (gnet_md5_clone): Added.

	* debian/control.in: Sync with README

Thu May 24 21:20:09 2001  David Helder  <dhelder@umich.edu>

	* gnet.spec.in: Change name back to 'gnet'.  I don't
	    know how to fix this...

	* *: Get ready for release...
	
Thu May 24 12:12:04 2001  Andrew Lanoix <alanoix@umich.edu>

	* NEWS updated to say full windows port

Thu May 24 10:14:02 2001  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c (object_echoserver): Fixed
	    call to gnet_server_new.
