@@ -6,8 +6,9 @@ Changes in Gnet
 
 1.1.1 ("Cornmeal" release, UNRELEASED)
 -----
-* gnet_inetaddr_new_async has pthread implemention
-* gnet_{sha,md5}_clone functions
+* gnet_inetaddr_new_async has pthread implemention,
+    no longer succeeds immediately
+* New gnet_{sha,md5}_clone functions
 * MacOSX port
 
 
